test/error/end_label_gen_block_wrong.sv
// pattern: element "yes" has mismatched end label "no"
module top;
    if (1) begin : yes
        wire x;
    end : no
endmodule
